# linkkeys

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  diesel.toml  dns-less-local-rp-design.md  tools.sh
.reactorcide/jobs/: build.yaml  conventional-commits.yaml  demoappsite-build-and-deploy.yaml  demoappsite-build-test.yaml  linkkeys-rp-deploy.yaml  linkkeys-server-deploy.yaml  release.yaml  server-build-and-deploy.yaml  server-build-test.yaml  test-postgres.yaml  test-sqlite.yaml  website-build-and-deploy.yaml  website-build-test.yaml  website-pr-merge.yaml
.reactorcide/jobs/scripts/: demoappsite-build-and-deploy.sh  demoappsite-build-test.sh  linkkeys-server-deploy.sh  release.sh  server-build-and-deploy.sh  (+4 more)
crates/csilgen-transport/: Cargo.toml
crates/csilgen-transport/src/: carrier.rs  conventions.rs  datagrams.rs  events.rs  lib.rs  rpc.rs
crates/liblinkkeys/: Cargo.toml
crates/liblinkkeys/examples/: generate_conformance_vectors.rs
crates/liblinkkeys/i18n/: en-US.json  en-XA.json
crates/liblinkkeys/src/: assertions.rs  auth_request.rs  claim_policy.rs  claims.rs  consent.rs  crypto.rs  dns.rs  domain_claims.rs  encoding.rs  i18n.rs  lib.rs  local_rp.rs  revocation.rs  signing_request.rs  userinfo.rs
crates/liblinkkeys/tests/: conformance.rs
crates/linkkeys/: Cargo.toml
crates/linkkeys-rpc-client/: Cargo.toml
crates/linkkeys-rpc-client/src/: lib.rs  tls.rs
crates/linkkeys/src/: claim_signing.rs  conversions.rs  dns.rs  email.rs  lib.rs  main.rs  net.rs  rp_config.rs  schema.rs
crates/linkkeys/src/backup/: mod.rs
crates/linkkeys/src/cli/: mod.rs  tcp_client.rs
crates/linkkeys/src/db/: auth_credentials.rs  claim_policy.rs  claims.rs  consent_grants.rs  domain_keys.rs  domain_pins.rs  email_verification.rs  guestbook.rs  issued_revocations.rs  local_rp.rs  mod.rs  models.rs  nonces.rs  peer_keys.rs  profiles.rs  relations.rs  user_keys.rs  user_release_prefs.rs  users.rs
crates/linkkeys/src/services/: account.rs  admin.rs  attestation.rs  auth.rs  authorization.rs  handshake.rs  hello.rs  local_rp.rs  mod.rs  ops.rs  password.rs  pins.rs  ratelimit.rs  revocations.rs  self_service.rs  verification.rs
crates/linkkeys/src/tcp/: mod.rs  tls.rs
crates/linkkeys/src/web/: account.rs  account_ui.rs  admin.rs  admin_ui.rs  guard.rs  local_rp_ui.rs  mod.rs  nonce_store.rs  policy_admin_ui.rs  profile_ui.rs  rp.rs
crates/linkkeys/tests/: account_service_test.rs  admin_accounts_test.rs  admin_service_test.rs  attestation_test.rs  auth_authorize_test.rs  auth_test.rs  backup_restore_test.rs  claim_policy_flow_test.rs  consent_grant_db_test.rs  consent_http_e2e_test.rs  consent_scope_test.rs  cross_domain_keys_test.rs  crypto_flow_test.rs  domain_keys_parse_test.rs  encrypt_token_test.rs  guestbook_test.rs  hello_test.rs  i18n_test.rs  local_rp_persistence_test.rs  local_rp_web_e2e_test.rs  migration_idempotency_test.rs  nonce_replay_test.rs  ops_test.rs  pin_recheck_test.rs  profiles_test.rs  relations_test.rs  revocation_cert_test.rs  revocation_exchange_test.rs  rp_authorize_api_access_test.rs  signing_key_selection_test.rs  tcp_account_self_service_test.rs  tcp_claim_approval_issuance_admin_test.rs  tcp_claim_type_admin_test.rs  tcp_consent_scope_test.rs  tcp_local_rp_admin_test.rs  tcp_local_rp_test.rs  tcp_policy_issuer_release_admin_test.rs  tcp_rp_test.rs  tcp_user_lifecycle_key_revocation_admin_test.rs  tls_mtls_e2e_test.rs  (+2 more)
crates/linkkeys/tests/common/: data_factory.rs  mod.rs  net.rs
csil/: linkkeys.csil
demoappsite/: Cargo.toml  Dockerfile
demoappsite/helm/: Chart.yaml  values.yaml
demoappsite/helm/templates/: _helpers.tpl  deployment.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml
demoappsite/src/: main.rs
deploy/: live.env.example  live.sh  values-catalystsquad.yaml  values-demoappsite.yaml  values-rp.yaml  values-squizzlezig.yaml  values-todandlorna.yaml
deploy/examples/: values-idp-sqlite.yaml  values-idp.yaml  values-rp.yaml
docs/: DEMO.md  DEPLOYING-RP.md  DESIGN.md  LIVE-ENV.md  claim-policy-and-consent.md  claim-trust-verification.md  kerberos_comparison.md  local-rp-admin-guide.md  local-rp-app-developer-guide.md  local-rp-key-lifecycle.md  local-rp-operator-guide.md  local-rp-security-tradeoffs.md  reactorcide-jobs.md  rp-claims.example.toml
docs/csilgen-requests/: 2026-07-02-revocation-and-pin-rpc.md
helm_chart/: Chart.yaml  values.yaml
helm_chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  postgresql.yaml  pvc.yaml  rp-claims-configmap.yaml  secret.yaml  service.yaml  serviceaccount.yaml  tcproute.yaml  tlsroute.yaml
migrations/postgres/: 2026-04-02-000001_create_identity_tables.sql  2026-04-09-000001_create_relations_and_extensions.sql
migrations/sqlite/: 2026-04-02-000001_create_identity_tables.sql  2026-04-09-000002_add_relations_unique_index.sql  2026-06-14-000002_create_consent_grants.sql  2026-06-15-000001_create_profiles.sql
sdks/local-rp/python/: README.md  example.md  pyproject.toml
sdks/local-rp/python/linkkeys_local_rp/: __init__.py  begin.py  claims.py  complete.py  crypto.py  dns.py  encoding.py  identity.py  local_rp.py  revocation.py  rpc.py  timeutil.py  tls.py  transport.py
sdks/local-rp/python/tests/: conftest.py  test_conformance_callback_box.py  test_conformance_claims.py  test_conformance_dns.py  test_conformance_envelopes.py  test_conformance_expirations.py  test_conformance_keys.py  test_conformance_revocations.py  test_conformance_tickets.py  test_conformance_url_params.py  test_flow.py
sdks/local-rp/rust/: .gitignore  Cargo.toml  README.md  example.md
sdks/local-rp/rust/src/: begin.rs  complete.rs  dns.rs  error.rs  identity.rs  lib.rs  rpc.rs  transport.rs
sdks/local-rp/rust/tests/: claims_conformance.rs  conformance.rs  flow.rs  revocations_conformance.rs
src/db/: mod.rs
website/: Dockerfile  config.yaml  index.html  values.yaml
website/templates/: author.jinja2  authors.jinja2  base.jinja2  listing.jinja2  page.jinja2  tag.jinja2  tags.jinja2
(+473 files in other folders)
