[package]
name = "demoappsite"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
rocket = { version = "0.5", features = ["tls", "secrets"] }

# LinkKeys protocol types + the shared CSIL-RPC TCP client. The demo is a thin
# browser-facing relying party: it calls its RP server over TCP (the primary
# LinkKeys transport), holding only an API key — no domain key.
liblinkkeys = { path = "../crates/liblinkkeys" }
linkkeys-rpc-client = { path = "../crates/linkkeys-rpc-client" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# UUID for nonce generation
uuid = { version = "1.10", features = ["v4"] }

# TLS cert generation
rcgen = "0.13"

# DNS resolution (for resolving domain API base URL)
hickory-resolver = "0.24"

# Utilities
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
