[package]
name = "liblinkkeys"
version = "0.1.0"
edition = "2021"

[dependencies]
# CBOR serialization
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

# Encoding
base64ct = { version = "1", features = ["alloc"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
